fixed style issue on mobile

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -2,7 +2,7 @@
 .app{
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    min-height: 100vh;
     main{
         display: flex;
         flex-direction: column;
